maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:4: error: not found: value aMurEst
  if ((aMurNord(x,y) && aMurOuest(x,y) && aMurEst(x,y)) || (aMurNord(x,y) && aMurSud(x,y) && aMurEst(x,y)) || (aMurNord(x,y) && aMurOuest(x,y) && aMurSud(x,y)) || (aMurSud(x,y) && aMurOuest(x,y) && aMurEst(x,y))){
                                          ^ShortestPathMaze:4: error: not found: value aMurSud
  if ((aMurNord(x,y) && aMurOuest(x,y) && aMurEst(x,y)) || (aMurNord(x,y) && aMurSud(x,y) && aMurEst(x,y)) || (aMurNord(x,y) && aMurOuest(x,y) && aMurSud(x,y)) || (aMurSud(x,y) && aMurOuest(x,y) && aMurEst(x,y))){
                                                                             ^ShortestPathMaze:4: error: not found: value aMurEst
  if ((aMurNord(x,y) && aMurOuest(x,y) && aMurEst(x,y)) || (aMurNord(x,y) && aMurSud(x,y) && aMurEst(x,y)) || (aMurNord(x,y) && aMurOuest(x,y) && aMurSud(x,y)) || (aMurSud(x,y) && aMurOuest(x,y) && aMurEst(x,y))){
                                                                                             ^ShortestPathMaze:4: error: not found: value aMurSud
  if ((aMurNord(x,y) && aMurOuest(x,y) && aMurEst(x,y)) || (aMurNord(x,y) && aMurSud(x,y) && aMurEst(x,y)) || (aMurNord(x,y) && aMurOuest(x,y) && aMurSud(x,y)) || (aMurSud(x,y) && aMurOuest(x,y) && aMurEst(x,y))){
                                                                                                                                                  ^ShortestPathMaze:4: error: not found: value aMurSud
  if ((aMurNord(x,y) && aMurOuest(x,y) && aMurEst(x,y)) || (aMurNord(x,y) && aMurSud(x,y) && aMurEst(x,y)) || (aMurNord(x,y) && aMurOuest(x,y) && aMurSud(x,y)) || (aMurSud(x,y) && aMurOuest(x,y) && aMurEst(x,y))){
                                                                                                                                                                    ^ShortestPathMaze:4: error: not found: value aMurEst
  if ((aMurNord(x,y) && aMurOuest(x,y) && aMurEst(x,y)) || (aMurNord(x,y) && aMurSud(x,y) && aMurEst(x,y)) || (aMurNord(x,y) && aMurOuest(x,y) && aMurSud(x,y)) || (aMurSud(x,y) && aMurOuest(x,y) && aMurEst(x,y))){
                                                                                                                                                                                                      ^ShortestPathMaze:5: error: not enough arguments for method setIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
    setIndication(x,y)
                 ^ShortestPathMaze:10: error: not enough arguments for method setIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
    setIndication(x,y)
                 ^ShortestPathMaze:16: error: not found: value aMurEst
    if (!aMurEst(x,y)){
         ^ShortestPathMaze:26: error: not found: value aMurSud
    if (!aMurSud(x,y)){
         ^ShortestPathMaze:26: error: type mismatch;
 found   : Unit
 required: Boolean
    if (!aMurSud(x,y)){
    ^